// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package com.lightbend.gsa;
option  go_package = "com.lightbend.gsa";

message IncreaseValue {
    string counter_id = 1;
    int32 value = 2;
}

message DecreaseValue {
    string counter_id = 1;
    int32 value = 2;
}

message ResetValue {
    string counter_id = 1;
}

message GetCounter {
    string counter_id = 1;
}

message CurrentCounter {
    int32 value = 1;
}

service CounterService {

    rpc Increase(IncreaseValue) returns (google.protobuf.Empty){
        option (google.api.http) = {
            put: "/counter/{counter_id}/increase"
            body: "*"
        };
    }
    rpc Decrease(DecreaseValue) returns (google.protobuf.Empty){
        option (google.api.http) = {
            put: "/counter/{counter_id}/decrease"
            body: "*"
        };
    }
    rpc Reset(ResetValue) returns (google.protobuf.Empty){
        option (google.api.http) = {
            put: "/counter/{counter_id}/reset"
            body: "*"
        };
    }
    rpc GetCurrentCounter(GetCounter) returns (CurrentCounter){
        option (google.api.http) = {
            get: "/counter/{counter_id}"
        };
    }
}