syntax = "proto3";

package com.lightbend.gsa.domain;

import "akkaserverless/annotations.proto";

option (akkaserverless.file).value_entity = {
    name: "Counter"
    entity_type: "counter"
    state: "CounterState"
};

message CounterState {
    int32 value = 1;
}
